Appfx Seventh Update
Add Code and Environment Setup product.

--- a/_includes/highlight-section.html
+++ b/_includes/highlight-section.html
@@ -75,6 +75,21 @@
             </a>
             
         </div>
+		<div class="col-sm-4">
+            <a href="code-environment-setup/introduction.html" class="box-product ">
+                <span class="icon col-sm-3">
+                    <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-car fa-stack-1x fa-inverse"></i>
+                  </span>
+                </span>
+                <span class="info col-sm-9">
+                    <h4>Product Six</h4>
+                    <p>Code and Environment Setup</p>
+                </span>
+            </a>
+            
+        </div>
         
     </div>
 
