AppFx Eight Update
Add seventh module -> Database development workflow.

--- a/_includes/highlight-section.html
+++ b/_includes/highlight-section.html
@@ -1,7 +1,7 @@
 <section class="sectio highlighted-section">   
 <div class="container">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <a href="registration-portal/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -10,13 +10,13 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product One</h4>
+                    <h4>Module One</h4>
                     <p>Registration Portal</p>
                 </span>
             </a>
             
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <a href="admin-portal/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -25,12 +25,12 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product Two</h4>
+                    <h4>Module Two</h4>
                     <p>Admin Portal</p>
                 </span>
             </a>
         </div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
             <a href="appsystem-developer/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -39,13 +39,13 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product Three</h4>
+                    <h4>Module Three</h4>
                     <p>AppSystem Developer</p>
                 </span>
             </a>
             
         </div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
             <a href="web-development-workflow/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -54,13 +54,13 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product Four</h4>
+                    <h4>Module Four</h4>
                     <p>Web Development Workflow</p>
                 </span>
             </a>
             
         </div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
             <a href="windows-development-workflow/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -69,13 +69,13 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product Five</h4>
+                    <h4>Module Five</h4>
                     <p>Windows Development Workflow</p>
                 </span>
             </a>
             
         </div>
-		<div class="col-sm-4">
+		<div class="col-sm-3">
             <a href="code-environment-setup/introduction.html" class="box-product ">
                 <span class="icon col-sm-3">
                     <span class="fa-stack fa-2x">
@@ -84,8 +84,23 @@
                   </span>
                 </span>
                 <span class="info col-sm-9">
-                    <h4>Product Six</h4>
+                    <h4>Module Six</h4>
                     <p>Code and Environment Setup</p>
+                </span>
+            </a>
+            
+        </div>
+		<div class="col-sm-3">
+            <a href="db-development-workflow/introduction.html" class="box-product ">
+                <span class="icon col-sm-3">
+                    <span class="fa-stack fa-2x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-tree fa-stack-1x fa-inverse"></i>
+                  </span>
+                </span>
+                <span class="info col-sm-9">
+                    <h4>Module Seven</h4>
+                    <p>Database Development Workflow</p>
                 </span>
             </a>
             
