--- a/_includes/section-topics.html
+++ b/_includes/section-topics.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="mb-3">Registration Portal Topics</h2>                
+                <h2 class="mb-3">Registration Portal </h2>                
             </div>            
         </div>
         <div class="row equal">
