--- a/_includes/section-topics7.html
+++ b/_includes/section-topics7.html
@@ -3,13 +3,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="mb-3">AppSystemDeveloper </h2>                
+                <h2 class="mb-3">Database Development Workflow</h2>                
             </div>            
         </div>
         <div class="row equal">
             {% assign sidebar1 = site.data.homeTopicList.entries %}
             {% for entry in sidebar1 %}
-                {% if entry.topic contains "AppSysDev" %}   
+                {% if entry.topic contains "Database Development Workflow" %}   
                     {% for folderitem in entry.topicList %}
                         <div class="col-sm-3 mb-30">
                             <div class="boxtopics">
